--- a/style.css
+++ b/style.css
@@ -4,12 +4,6 @@ body {
   display: relative;
 }
 
-/*http://stackoverflow.com/questions/3942254/how-to-specify-font-attributes-for-all-elements-on-an-html-web-page*/
-ul li, a, h1, h2, p {
-  font-family: 'Open Sans', sans-serif;
-  color: white;
-  text-align: center;
-}
 
 h1 {
   text-shadow: 2px 2px rgb(194, 32, 100);
@@ -20,6 +14,12 @@ h1 {
 h2 {
   font-size: 20px;
   font-weight: normal;
+}
+
+ul li, a, h1, h2, p {
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  text-align: center;
 }
 
 /* http://interfacelift.com/wallpaper/D670af89/02482_gamut_2560x1600.jpg */
@@ -56,7 +56,7 @@ ul {
 
 nav li {
   cursor: pointer;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 nav li:last-child {
@@ -146,7 +146,8 @@ form {
 footer {
   background-color:	#0f1a38;
   width: 100%;
-  height: 100%;
+  height: auto;
+  position: absolute;;
   display: relative;
 }
 
