readme and screenshots

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ input {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 
 form {
